--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,7 @@ conf/config.yaml
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+*.log
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
